-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
The following panic might happen with current codes:
(ofd_internal.h:440:tsi2ofd_info()) ASSERTION( info->fti_attr.la_valid == 0 ) failed:
(ofd_internal.h:440:tsi2ofd_info()) LBUG
[ 5321.108598] Call Trace:
[ 5321.109347] [<ffffffffc06fc8bc>] libcfs_call_trace+0x8c/0xc0 [libcfs]
[ 5321.111342] [<ffffffffc06fc96c>] lbug_with_loc+0x4c/0xa0 [libcfs]
[ 5321.113026] [<ffffffffc147631a>] ofd_preprw+0xcfa/0x1160 [ofd]
[ 5321.114643] [<ffffffffc0bb934c>] tgt_brw_write+0xc7c/0x1cf0 [ptlrpc]
[ 5321.116373] [<ffffffffc0bbc50a>] tgt_request_handle+0x91a/0x15c0 [ptlrpc]
[ 5321.118230] [<ffffffffc0b61636>] ptlrpc_server_handle_request+0x256/0xb00 [ptlrpc]
[ 5321.120318] [<ffffffffc0b6516c>] ptlrpc_main+0xbac/0x1560 [ptlrpc]
[ 5321.122001] [<ffffffff84cc1c31>] kthread+0xd1/0xe0
[ 5321.123023] [<ffffffff85374c37>] ret_from_fork_nospec_end+0x0/0x39
[ 5321.124066] [<ffffffffffffffff>] 0xffffffffffffffff
- is related to
-
LU-14845 LustreError: 80505:0:(ofd_internal.h:432:tsi2ofd_info()) LBUG
-
- Resolved
-